--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/ten-repository/js/main.js"></script>
     <script src="./js/main.js"></script>
+    <script src="/Fe-Test/js/main.js"></script>
   </body>
 </html>
